# stm32-bonsai

./: Cargo.toml  Embed.toml  README.md  build.rs  getting-started.md  stm32f103.svd.svd  智能盆栽系统通信协议.md
.cargo/: config.toml
src/: actuators.rs  display.rs  main.rs  protocol.rs
src/sensors/: bh1750.rs  dht11.rs  mod.rs  soil.rs
