[package]
name = "stm32-bonsai"
version = "1.0.0"
authors = ["solsticexin <solstice.xin@gmail.com>"]
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
cortex-m-rtic = "1.1"
heapless = "0.7"
nb = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"
embedded-hal = "1"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }

[dependencies.stm32f1xx-hal]
version = "0.11.0"
features = ["stm32f103", "rtic", ]


[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
